<resources>
    <string name="app_name">MyApp</string>
    <string name="signup_title">Unlock your future with L&amp;P!</string>
    <string name="name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_redirect">Already have an account? Login</string>
    <string name="welcome">Class is in Session—Let’s Go!</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_redirect">No account? Sign Up</string>
    <string name="username">UserName</string>
    <string name="title">Title</string>
    <string name="sample_to_do">Sample To Do</string>
    <string name="delete">Delete</string>
    <string name="delete_task">Delete Task</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="add_task">Add Task</string>


</resources>
