<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="App Logo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/secondary"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>


    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:layout_marginTop="13dp"
        android:background="@drawable/edittext_bg"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:layout_marginTop="13dp"
        android:background="@drawable/edittext_bg"/>

    <TextView
        android:id="@+id/tvSignupRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@drawable/link_text_color"
        android:layout_marginTop="13dp"
        android:gravity="end"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:padding="12dp"
        android:background="@drawable/button_bg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_redirect"
        android:textColor="@drawable/link_text_color"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:onClick="goToSignup"/>
</LinearLayout>
